# co-log-fused-effects

./: CHANGELOG.md  README.md  co-log-fused-effects.cabal  hie.yaml
app/: Main.hs
src/: CoLogFusedEffects.hs
src/Control/Carrier/Colog/: Reader.hs  Trace.hs
src/Control/Effect/: Colog.hs
