cabal-version:       2.4
name:                co-log-fused-effects
version:             0.0.0.0
synopsis:            A fused-effects interface to the co-log ecosystem.
description:         A fused-effects interface to the co-log ecosystem.
homepage:            https://github.com/patrickt/co-log-fused-effects
bug-reports:         https://github.com/patrickt/co-log-fused-effects/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          Patrick Thomson <patrickt@github.com>
copyright:           2020 Patrick Thomson
category:            Logging
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/patrickt/co-log-fused-effects.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , fused-effects
                     , transformers

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       co-log-core
  hs-source-dirs:      src
  exposed-modules:     Control.Effect.Colog
                       Control.Carrier.Colog
                       Control.Carrier.Colog.Trace

executable co-log-fused-effects
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       co-log-fused-effects
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite co-log-fused-effects-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       co-log-fused-effects
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
